@@ -1,11 +1,6 @@
 FHEM:
-- RAWTIME
-
-- Remote serial device via IP (for the FHZ1300 WLAN)
-- Common buffer for parallel use of two devices: CUL+FHZ, (WS300/EM1000PC?)
 - fhem-to-fhem module
 - CUR built-in MENU creation support
-- Remove or reimplement repeater attribute (cul/fhz/doc)
 
 Webpgm2
 - plot data from multiple files in a single picture
